<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Schedule</string>
    <string name="_35">35</string>
    <string name="clients">Clients</string>
    <string name="_10">10</string>
    <string name="prospects">Prospects</string>
    <string name="_15">15</string>
    <string name="customer">Customer</string>
    <string name="renata_jerningan">Renata Jerningan</string>
    <string name="houses">Houses</string>
    <string name="realtor_miami_fl">Realtor - Miami, FL</string>
    <string name="properties">Properties</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Password muito curto</string>
    <string name="error_incorrect_password">Password incorreto</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Renata Jerningan</string>
    <string name="nav_header_subtitle">Realtor - Miami, FL</string>
    <string name="nav_header_desc">Renata Jerningan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customer_show">CustomerShowActivity</string>
    <string name="show_tour">Show 360</string>
</resources>
