<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="top|fill_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="260dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/abas"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Schedule" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Properties" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Customer" />
        </android.support.design.widget.TabLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/contentt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@mipmap/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="230dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/houses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:text="@string/_15"
                android:textColor="#ffffff"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:id="@+id/label1"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/houses"
                android:textColor="#ffffff"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <TextView
                android:id="@+id/clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:text="@string/_35"
                android:textColor="#ffffff"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12"
                android:paddingStart="20dp"
                android:paddingEnd="5dp" />

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clients"
                android:textColor="#ffffff"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <TextView
                android:id="@+id/prospects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:text="@string/_10"
                android:textColor="#ffffff"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12"
                android:paddingStart="20dp"
                android:paddingEnd="5dp" />

            <TextView
                android:id="@+id/label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prospects"
                android:textColor="#ffffff"
                android:textSize="6pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/profile"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renata_jerningan"
            android:textColor="#ffffff"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/realtor_miami_fl"
            android:textColor="#ffffff"
            android:textSize="5pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>